# tidygdal

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.Rmd  README.md  cleanup  configure  configure.ac
R/: gdal_config.R  gdal_dataset.R  gdal_info.R  gdal_raster_dataset.R  gdal_vector_dataset.R  gdal_vector_translate.R  tidygdal-package.R  zzz.R
man/: gdal_build_info.Rd  gdal_version.Rd
src/: Makevars.ucrt  Makevars.win  exports.c  gdal_dataset.c  gdal_info.c  gdal_vector.c  tidygdal.h
